# books

./: .gitignore  Cargo.toml  README.md  config.dist.json
src/: app.rs  config.rs  input.rs  main.rs
src/books/: isbn.rs  library.rs  mod.rs  volume.rs
src/books/google/: client.rs  mod.rs  search.rs  volume.rs
src/books/storage/: mod.rs
src/cli/: args.rs  config_builder.rs  mod.rs
