[package]
name = "books"
version = "0.1.0"
authors = ["Yuri M. <yurimorini@gmail.com>"]
description = "Fetches books using Google Book API from your ISBN list"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.11", features = ["derive", "env"] }
exitcode = "1.1.2"
futures = "0.3.19"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.59"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
home-dir = "0.1.0"
atty = "0.2.14"
thiserror = "1.0"
